--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,7 @@ textarea:focus{
     --gray:#707070 ;
     --light-gray:#F3F3F3;
     --orange :#FF6600;
+    --light-orange:#ffb032;
     --siment:#828282;
     --secondery-bule-dark:#C8EFFF;
     --t-color-7a7a7a: #7A7A7A;
