--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -1,5 +1,7 @@
 @media (max-width:991px) {
-
+    .table-user{
+        width: 870px;
+    }
     /* ==============   header section start  ============== */
     header {
         ul {
@@ -89,8 +91,120 @@
     .Latest-updates-section {
         top: 99px;
     }
-
+    .left-site-list-section{
+        margin-top: 10px;
+       .card-body {
+           margin-bottom: 10px;
+           padding: 5px 10px;
+           .card-title{
+               font-size: 1.1rem;
+               margin-bottom: 0;
+           }
+           .card-link{
+            font-size: 1.18rem;
+           }
+           .card-btn-link{
+            font-size: 1.18rem;
+           }
+       }
+    }
+    
     /* ======== Document-details-page-section start =========*/
+
+    .document-body{
+        .document-card-body{
+            padding: 12px 20px;
+            background-color: #F2FBFF;
+            display: flex;
+            flex-wrap: wrap;
+            margin-bottom: 16px;
+            .main-title{
+                font-size: 16px;
+            }
+            .sub-title{
+                font-size: 14px;
+                color: var(--siment);
+                margin-bottom: 7px;
+            }
+            .Document-edit-setion{
+
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                min-width: 210px;
+                margin-left: auto;
+                .translate-btn{
+                    border: 1px solid var(--theam-colour);
+                    color: var(--white);
+                    border-radius: 20px;
+                    width: 114px;
+                    background-color: var(--theam-colour);
+
+                    a{
+                        color: var(--white);
+                    }
+                    &:hover{
+                        background-color: var(--light-blue);
+                    }
+                }
+                .download-btn{
+                    min-width: 30px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    a{
+                        color: var(--black);
+                    }
+                }
+                .edit-btn {
+                    border-left: 1px solid #000000;
+                    min-width: 30px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    i{
+                        color: var(--black);
+                    }
+                }
+                .trash-btn {
+                    min-width: 30px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-left: 1px solid #000000;
+                    i{
+                        color: var(--black);
+                    }
+                }
+            }
+        }
+    .from-details-section{
+        // width: min(100% - 0px , 80%);
+        // border: 1px solid red;
+        .document-from-box{
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            margin-bottom: 15px;
+           .title-docu{
+            font-size: 16px;
+            font-weight: 500;
+            width: min(100% - 0 , 70%);
+           }
+           .doc-link{
+            margin: 10px 0;
+            font-size: 16px;
+           } 
+           .all-btn-setion{
+            .btn-box{
+                padding: 7px 15px;
+                margin: 5px 5px;
+            }
+           }
+        }
+    }
+
+    }
     .doc-details-right-section .doc-details-box .back-btn-box {
         margin-right: 20px;
     }
@@ -109,7 +223,6 @@
 
      .Discussion-comments-box .dic-comment-box .reviews-box .img-section {
         width: 80px;
-
     }
 
      .Discussion-comments-box .dic-comment-box .reviews-box .img-section .img-reviews-box {
@@ -117,7 +230,16 @@
         width: 50px;
         height: 50px;
     }
-
+    
+    .Discussion-comments-box .Description-title{
+        font-size: 1.1rem;
+    }
+    .Discussion-comments-box .dic-comment-box .reviews-box .reviews-chate-box .name-title{
+        font-size: 1.2rem;
+    }
+    .Discussion-comments-box .dic-comment-box .reviews-box .reviews-chate-box .Description-text {
+        font-size: 14px;
+    }
     /* ========= Discussion-comments-page-section End =========== */
      .countries-communities-body .table-section .dic-table thead tr .country {
         width: 244px;
@@ -147,6 +269,122 @@
 
 
 /* ================ News-page-section End ===================== */
+/* ======================= flag-page start ========================= */
+.flag-body{
+    .flag-card{
+        background-color: var(--sky-blue);
+        margin-bottom: 10px;
+       .flag-head-box{
+        display: flex;
+        padding: 10px 10px;
+        width: 100%;
+        .number-list{
+            width: min(100% - 0px , 5% );
+        }
+        .title-box{
+            width: min(100% - 0 , 95%);
+            .main-title-contain{
+             max-width: 100%;
+             width: min(100% - 0px , 100% );
+             display: flex;
+             .main-title{
+                font-size: 16px;
+                font-weight: 500;
+             }
+             .icon-comment{
+                margin-left: auto;
+                .comment-number{
+                    font-size: 20px;
+                    margin-left: 5px;
+                }
+             }
+            } 
+            .sub-title{
+                color: var(--siment);
+                .green-title{
+                    color: var(--dark-green);
+                }
+            }
+        }
+       } 
+       .flag-footer-box{
+        .reviews-box {
+            display: flex;
+            margin: 2px 0;
+            padding: 10px 5px;
+            border: 1px solid #707070;
+            border-radius: 13px;
+            .img-section {
+                width: 80px;
+                display: flex;
+                justify-content: center;
+
+                .img-reviews-box {
+
+                    border-radius: 50%;
+                    width: 50px;
+                    height: 50px;
+
+                    img {
+                        object-fit: cover;
+                        height: 100%;
+                        border-radius: 50%;
+                    }
+                }
+            }
+            .reviews-chate-box {
+                width: 100%;
+                margin-left: 20px;
+                .title-Setion-dic {
+                    display: flex;
+                    flex-wrap: wrap;
+                    .name-title {
+                        font-size: 1.2rem;
+                     }
+
+                    .date-post {
+                        color: var(--siment);
+                        font-size: 1rem;
+                        margin-top: 7px;
+                        margin-left: 20px;
+                    }
+                }
+
+                .Description-text {
+                    padding: 10px 0;
+                    font-size: 14px;
+                    font-weight: 400;
+                }
+                .comment-edit-action{
+                    a{
+                        font-size: 1.1rem;
+                    }
+                }
+           
+            }
+        }
+       }
+    }
+}
+/* ======================= flag-page End ========================= */
+/* ================ Discussion forum  page Start =================== */
+
+.Discussion-right-Section {
+    .Discussion-table-section {
+        overflow-x: auto; 
+        max-width: 100%;
+        margin-top: 5px;
+
+        .dic-table {
+            width: 860px;
+            border-spacing: 0px 5px !important;
+            border-collapse: separate !important;
+        }
+    }
+}
+
+
+/* ================ Discussion forum page End =================== */
 
 }
 
@@ -192,6 +430,17 @@
 }
 
 @media (max-width:767px) {
+
+    .table-user{
+        width: 870px;
+    }
+    .flag-body .flag-card .flag-footer-box .reviews-box .reviews-chate-box .title-Setion-dic{
+        justify-content: space-between;
+    }
+    .flag-body .flag-card .flag-footer-box .reviews-box .reviews-chate-box .title-Setion-dic .date-post {
+        margin-top: 10px;
+        margin-left: 0px;
+    }
     .nvabar-setion .nav-title {
         font-size: 15px;
     }
@@ -208,17 +457,7 @@
     /* ========= Discussion-comments-page-section Start =========== */
         .Discussion-comments-box {
             .dic-comment-head-setion {
-                margin: 10px 0;
-                padding: 20px 0;
 
-                p {
-                    color: var(--white);
-                    font-size: 0.9rem;
-                }
-
-                .back-btn {
-                    padding: 5px 15px;
-                }
             }
 
             .dic-comment-box {
