--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -1,7 +1,11 @@
 @media (max-width:991px) {
+/* ============== user admin table section start ================= */
+    
     .table-user{
         width: 870px;
     }
+/* ============== user admin table section End ================= */
+
     /* ==============   header section start  ============== */
     header {
         ul {
