--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,7 +1,9 @@
 @media (max-width: 991px) {
+  /* ============== user admin table section start ================= */
   .table-user {
     width: 870px;
   }
+  /* ============== user admin table section End ================= */
   /* ==============   header section start  ============== */
   header ul {
     padding: 0;
